src/test/deca/context/invalid/created/binary_exp/op_bool/and_A_int.deca
// Description :
//    test and entre un A et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.33) Type gauche A. Type droit int Type attendu: ‘boolean’
class A{}
{
A a;
int b;
boolean c = a && b;
}
